@@ -11,8 +11,13 @@ duicontrolpanel (0.11.6~unreleased) unstable; urgency=low
     respond anymore
   * Fixes: NB#225295 - [TASK] On relaunching the settings app, the view
     is still showing the bottom list of categories
+  * Changes: It is now configurable if the category icons are above or
+    below the applet icons using the ComponentOrder key in the
+    .cpcategory files
+  * Changes: The applets are now above the categories on the hardcoded
+    "MainPage" category
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Feb 2011 12:18:11 +0100
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Feb 2011 15:12:55 +0100
 
 duicontrolpanel (0.11.5) unstable; urgency=low
 
